# bleepstore

./: .gitignore  CONFORMANCE.md  Makefile  OBJECTIVE.MD  PLAN.md  README.md  bleepstore.example.yaml
benchmarking/: bench.py  run.sh
examples/: aws-s3.yaml  azure-blob.yaml  dynamodb-metadata.yaml  gcp-gcs.yaml  local-jsonl-metadata.yaml  local.yaml  memory-metadata.yaml  memory.yaml  sqlite.yaml
golang/: .gitignore  Makefile  (+10 more)
python/: .gitignore  AGENTS.md  DO_NEXT.md  Makefile  PLAN.md  README.md  S3_GAP_REMAINING.md  STATUS.md  WHAT_WE_DID.md  pyproject.toml  run_e2e.sh
python/docs/: DEPLOYMENT.md
python/src/bleepstore/: __init__.py  auth.py  cli.py  config.py  errors.py  logging_config.py  meta_cli.py  metrics.py  serialization.py  server.py  validation.py  xml_utils.py
python/src/bleepstore/cluster/: __init__.py  raft.py
python/src/bleepstore/handlers/: __init__.py  acl.py  bucket.py  multipart.py  object.py
python/src/bleepstore/metadata/: __init__.py  cosmos.py  dynamodb.py  firestore.py  local.py  memory.py  models.py  sqlite.py  store.py
python/src/bleepstore/storage/: __init__.py  aws.py  azure.py  backend.py  gcp.py  local.py  memory.py  sqlite.py
python/tasks/done/: stage-01-server-bootstrap.md  stage-02-metadata-sqlite.md  stage-03-bucket-crud.md  stage-04-object-crud.md  stage-05a-list-copy-batch-delete.md  stage-05b-range-conditional-acl.md  stage-06-sigv4-auth.md  stage-07-multipart-core.md  stage-08-multipart-completion.md  stage-10-aws-gateway.md  stage-11a-gcp-gateway.md  stage-11b-azure-gateway.md  stage-15-performance.md  stage-16-s3-completeness.md  stage-1b-openapi-observability.md
python/tests/: conftest.py  test_auth.py  test_config.py  test_handlers_bucket.py  test_handlers_object.py  test_handlers_object_advanced.py  test_metadata_cosmos.py  test_metadata_dynamodb.py  test_metadata_firestore.py  test_metadata_sqlite.py  test_metrics.py  test_multipart.py  test_multipart_complete.py  test_observability.py  test_openapi.py  test_openapi_conformance.py  test_range.py  test_s3_api_completeness.py  test_serialization.py  test_server.py  test_storage_aws.py  test_storage_azure.py  test_storage_gcp.py  test_storage_local.py  test_validation.py  test_xml_utils.py
rust/: .gitignore  AGENTS.md  Cargo.toml  DO_NEXT.md  Makefile  PLAN.md  README.md  S3_GAP_REMAINING.md  STATUS.md  WHAT_WE_DID.md  run_e2e.sh
rust/docs/: DEPLOYMENT.md
rust/src/: auth.rs  config.rs  errors.rs  lib.rs  main.rs  metrics.rs  serialization.rs  server.rs  xml.rs
rust/src/cluster/: mod.rs  raft.rs
rust/src/handlers/: bucket.rs  mod.rs  multipart.rs  object.rs
rust/src/metadata/: cosmos.rs  dynamodb.rs  firestore.rs  local.rs  memory.rs  mod.rs  sqlite.rs  store.rs
rust/src/storage/: aws.rs  azure.rs  backend.rs  gcp.rs  local.rs  memory.rs  mod.rs  sqlite.rs
rust/tasks/done/: stage-01-server-bootstrap.md  stage-02-metadata-sqlite.md  stage-03-bucket-crud.md  stage-04-object-crud.md  stage-05a-list-copy-batch-delete.md  stage-05b-range-conditional-acl.md  stage-06-sigv4-auth.md  stage-07-multipart-core.md  stage-08-multipart-completion.md  stage-10-aws-gateway.md  stage-11a-gcp-gateway.md  stage-11b-azure-gateway.md  stage-15-performance.md  stage-16-s3-completeness.md  stage-1b-openapi-observability.md
(+191 files in other folders)
