[package]
name = "bleepstore"
version = "0.1.0"
edition = "2021"
description = "S3-compatible object storage server"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
quick-xml = { version = "0.31", features = ["serialize"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
bytes = "1"
http = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
httpdate = "1"
utoipa = { version = "5", features = ["axum_extras"] }
garde = { version = "0.22", features = ["derive", "regex"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
md-5 = "0.10"
percent-encoding = "2"
subtle = "2"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

# AWS SDK for Rust (gateway backend) -- pinned to versions compatible with rustc 1.88.
aws-config = "=1.8.13"
aws-sdk-s3 = "=1.122.0"
# Transitive AWS SDK deps pinned for rustc 1.88 compatibility (MSRV bumped to 1.91 on 2026-02-11).
aws-credential-types = "=1.2.11"
aws-runtime = "=1.6.0"
aws-sigv4 = "=1.3.8"
aws-smithy-async = "=1.2.11"
aws-smithy-checksums = "=0.64.3"
aws-smithy-eventstream = "=0.60.18"
aws-smithy-http = "=0.63.3"
aws-smithy-http-client = "=1.1.9"
aws-smithy-json = "=0.62.3"
aws-smithy-observability = "=0.2.4"
aws-smithy-query = "=0.60.13"
aws-smithy-runtime = "=1.10.0"
aws-smithy-runtime-api = "=1.11.3"
aws-smithy-types = "=1.4.3"
aws-smithy-xml = "=0.60.13"
aws-types = "=1.3.11"
aws-sdk-sso = "=1.93.0"
aws-sdk-ssooidc = "=1.95.0"
aws-sdk-sts = "=1.97.0"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
